# tieu-tony-ai-gateway

./: .env.example  .gitignore  AGENTS.md  README.md  REPORT_SPRINT_13.md  REPORT_SPRINT_14.md  REPORT_SPRINT_15.md  REPORT_SPRINT_16.md  REPORT_SPRINT_17.md  REPORT_SPRINT_18A.md  REPORT_SPRINT_18B.md  REPORT_SPRINT_19.md  REPORT_SPRINT_19_BUGFIX.md  REPORT_SPRINT_20C.md  REPORT_SPRINT_21A.md  REPORT_SPRINT_21B.md  REPORT_SPRINT_22.md  REPORT_SPRINT_23.md  REPORT_SPRINT_24.md  REPORT_SPRINT_25.md  REPORT_SPRINT_26.md  REPORT_SPRINT_27.md  REPORT_SPRINT_28.md  REPORT_SPRINT_30.md  REPORT_SPRINT_30_BUGFIX.md  REPORT_SPRINT_31.md  REPORT_SPRINT_32.md  REPORT_SPRINT_33.md  REPORT_SPRINT_34.md  REPORT_SPRINT_36.md  REPORT_SPRINT_37.md  REPORT_SPRINT_38.md  ROADMAP.md  RUN_LOCAL.md  TECH_DEBT.md  fix_circuit_breaker.py  fix_data.cjs  fix_data2.cjs  fix_data3.cjs  fix_data_py.py  (+35 more)
ai_gateway/: main.py
ai_gateway/adapters/: __init__.py  base.py  gemini.py  google_free.py  openai_compatible.py  openrouter.py
ai_gateway/api/: app.py  dev.py  runtime.py  schemas.py
ai_gateway/config/: model_prices.py  settings.py
ai_gateway/core/: __init__.py  budget.py  cache_economics.py  circuit_breaker.py  compressor.py  config.py  cooldown.py  cost.py  executor.py  fallback.py  health.py  quota.py  (+9 more)
docs/: CLIENT_COMPATIBILITY.md
examples/: smoke_budget_modes.py  smoke_chat_completion.py  smoke_external_client.py  smoke_openai_sdk.py  smoke_real_provider.py  smoke_runtime_selection.py  smoke_streaming.py
scripts/: check_env.ps1  run_local.ps1  smoke_external_client.ps1
src/: data.ts
(+48 files in other folders)
