[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tieu-tony-ai-gateway"
version = "0.1.0"
description = "A lightweight, flexible, and robust OpenAI-compatible AI Gateway."
authors = [
    { name="Tiểu Tony Team" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "openai"
]
